# Nord

./: .gitignore  README.html  README.md  main.py  pyproject.toml  requirements-dev-minimal.txt  server.py
static/: style.css
templates/: index.html
